--- a/vercel.json
+++ b/vercel.json
@@ -1,25 +1,27 @@
 {
-  "version": 2,
-  "functions": {
-    "api/index.php": {
-      "runtime": "vercel-php@0.7.4"
+    "version": 2,
+      "framework": null,
+    "functions": {
+        "api/index.php": { "runtime": "vercel-php@0.7.4" }
+    },
+    "routes": [{
+        "src": "/(.*)",
+        "dest": "/api/index.php"
+    }],
+    "env": {
+        "APP_ENV": "production",
+        "APP_DEBUG": "true",
+        "APP_URL": "https://yourproductionurl.com",
+
+        "APP_CONFIG_CACHE": "/tmp/config.php",
+        "APP_EVENTS_CACHE": "/tmp/events.php",
+        "APP_PACKAGES_CACHE": "/tmp/packages.php",
+        "APP_ROUTES_CACHE": "/tmp/routes.php",
+        "APP_SERVICES_CACHE": "/tmp/services.php",
+        "VIEW_COMPILED_PATH": "/tmp",
+
+        "CACHE_DRIVER": "array",
+        "LOG_CHANNEL": "stderr",
+        "SESSION_DRIVER": "cookie"
     }
-  },
-  "routes": [
-    { "src": "/(.*)", "dest": "api/index.php" }
-  ],
-  "env": {
-    "APP_ENV": "production",
-    "APP_DEBUG": "false",
-    "APP_KEY": "base64:YOUR_APP_KEY_HERE",
-    "DB_CONNECTION": "mysql",
-    "DB_HOST": "YOUR_DB_HOST_HERE",
-    "DB_PORT": "3306",
-    "DB_DATABASE": "YOUR_DB_NAME_HERE",
-    "DB_USERNAME": "YOUR_DB_USERNAME_HERE",
-    "DB_PASSWORD": "YOUR_DB_PASSWORD_HERE"
-  },
-  "build": {
-    "outputDirectory": "public"
-  }
 }
