staging vercel json update

--- a/vercel.json
+++ b/vercel.json
@@ -23,5 +23,8 @@
         "CACHE_DRIVER": "array",
         "LOG_CHANNEL": "stderr",
         "SESSION_DRIVER": "cookie"
-    }
+    },
+    "build": {
+        "outputDirectory": "public"
+  }
 }
