--- a/vercel.json
+++ b/vercel.json
@@ -1,24 +1,18 @@
 {
   "version": 2,
   "functions": {
-    "public/index.php": { "runtime": "vercel-php@0.7.4" }
+    "api/index.php": { "runtime": "vercel-php@0.7.4" }
   },
-  "builds": [
-    { "src": "vite.config.js", "use": "@vercel/static-build" },
-    { "src": "public/index.php", "use": "@vercel/php" }
-  ],
   "routes": [
     { "src": "/build/(.*)", "dest": "/public/build/$1" },
     { "src": "/assets/(.*)", "dest": "/public/assets/$1" },
     { "src": "/storage/(.*)", "dest": "/public/storage/$1" },
-    { "src": "/(.*)", "dest": "/public/index.php" }
+    { "src": "/(.*)", "dest": "/api/index.php" }
   ],
   "env": {
     "APP_ENV": "production",
     "APP_DEBUG": "false",
     "APP_URL": "https://digi-kampus-ut.vercel.app",
-
-    "APP_KEY": "base64:ISI_KEY_DARI_ENV_LOCAL",
 
     "APP_CONFIG_CACHE": "/tmp/config.php",
     "APP_EVENTS_CACHE": "/tmp/events.php",
