--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "scripts": {
         "build": "vite build",
         "dev": "vite",
-        "vercel": "npm ci && npm run build && composer update --no-dev --optimize-autoloader && npm run dev"
+        "vercel": "npm ci && npm run build && composer update --no-dev --optimize-autoloader"
     },
     "devDependencies": {
         "@tailwindcss/forms": "^0.5.2",
