--- a/vercel.json
+++ b/vercel.json
@@ -4,7 +4,7 @@
     "api/index.php": { "runtime": "vercel-php@0.7.4" }
   },
   "routes": [
-    { "src": "/build/(.*)", "dest": "/public/build/assets/$1" },
+    { "src": "/build/(.*)", "dest": "/public/build/$1" },
     { "src": "/assets/(.*)", "dest": "/public/assets/$1" },
     { "src": "/storage/(.*)", "dest": "/public/storage/$1" },
     { "src": "/(.*)", "dest": "/api/index.php" }
