--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
         "@tailwindcss/forms": "^0.5.2",
         "@tailwindcss/vite": "^4.1.17",
         "alpinejs": "^3.4.2",
-        "autoprefixer": "^10.4.2",
+        "autoprefixer": "^10.4.23",
         "axios": "^1.11.0",
         "baseline-browser-mapping": "^2.9.6",
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^2.0.0",
-        "postcss": "^8.4.31",
-        "tailwindcss": "^3.4.18",
+        "postcss": "^8.5.6",
+        "tailwindcss": "^3.4.0",
         "vite": "^7.0.4"
+    },
+    "dependencies": {
+        "@tailwindcss/postcss": "^4.1.18"
     }
 }
